@@ -1,3 +1,7 @@
+2007-05-22 12:33 nick
+
+	* configure.in.in, plugins/launcher/launcher-exec.c: Avoid zombie processes.
+
 2007-03-27 16:31 nick
 
 	* Backport trunk
